fix request date type to be symetric

--- a/src/main/resources/dart2-v3template/class.mustache
+++ b/src/main/resources/dart2-v3template/class.mustache
@@ -207,7 +207,9 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
       json[r'{{baseName}}'] = {{name}}.toUtc().toIso8601String();
       {{/isDateTime}}
       {{#isDate}}
-      json[r'{{baseName}}'] = {{name}}.toUtc().toIso8601String();
+      {{=<% %>=}}
+      json[r'<%baseName%>'] = "${<%name%>.year.toString()}-${<%name%>.month.toString().padLeft(2,'0')}-${<%name%>.day.toString().padLeft(2,'0')}";
+      <%={{ }}=%>
       {{/isDate}}
       {{^isDateTime}}
       {{^isDate}}
